Sfdcinsrinath/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Current_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current Address that the Account&apos;s billing fields are filled with.</description>
        <inlineHelpText>The current Address that the Account&apos;s billing fields are filled with.</inlineHelpText>
        <label>Current Address</label>
        <referenceTo>hed__Address__c</referenceTo>
        <relationshipLabel>Accounts (Current Address)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>_SYSTEM: One2OneContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__SMS_Opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt out</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Academic_Program</fullName>
        <active>true</active>
        <description>An Academic Program offered at the University.</description>
        <label>Academic Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Administrative</fullName>
        <active>true</active>
        <description>An administrative account.</description>
        <label>Administrative</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Organization</fullName>
        <active>true</active>
        <description>A business organization.</description>
        <label>Business Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Educational_Institution</fullName>
        <active>true</active>
        <description>An educational institution.</description>
        <label>Educational Institution</label>
    </recordTypes>
    <recordTypes>
        <fullName>HH_Account</fullName>
        <active>true</active>
        <description>A Household containing one or more individuals.</description>
        <label>Household Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sports_Organization</fullName>
        <active>true</active>
        <description>A sports organization.</description>
        <label>Sports Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>University_Department</fullName>
        <active>true</active>
        <description>A department in the university.</description>
        <label>University Department</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>